meta-lead-ads-package/main/default/objects/Meta_Daily_Analytics__c/Meta_Daily_Analytics__c.object-meta.xml
<CustomObject>
    <label>Meta Daily Analytics</label>
    <pluralLabel>Meta Daily Analytics</pluralLabel>
    <nameField>
        <displayFormat>MDA-{000000}</displayFormat>
        <label>Daily Analytics Record</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>