meta-lead-ads-package/main/default/objects/Meta_Daily_Analytics__c/fields/Analytics_Date__c.field-meta.xml
<CustomField>
    <fullName>Analytics_Date__c</fullName>
    <label>Analytics Date</label>
    <type>Date</type>
</CustomField>