meta-lead-ads-package/main/default/objects/Meta_Daily_Analytics__c/fields/CTR__c.field-meta.xml
<CustomField>
    <fullName>CTR__c</fullName>
    <label>CTR (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>